feat: add structure and name in html

--- a/rsschool-cv/index.html
+++ b/rsschool-cv/index.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>cv</title>
+    <link rel="icon" href="cv.ico" />
+    <link rel="stylesheet" href="style.css" />
+</head>
 
 <body>
-
-    <header>
-        <h1>What Does WWF Do?</h1>
-        <p>WWF's mission:</p>
+    <header class="header">
+        <h1>Norkina Yaroslava</h1>
+        <p>Here I am.</p>
     </header>
+    <div class="container">
+        <h2>Contacts</h2>
+        <ul class="nav-list">
+            <li class="nav-item">diskord norikin_yaroslava;</li>
+            <li class="nav-item">telegram @fvfngrdth;</li>
+            <li class="nav-item">janorka2004@gmail.com</li>
+        </ul>
+    </div>
+
 
     <nav>
         <a href="/html/">HTML</a> |
         <a href="/css/">CSS</a>
     </nav>
+    <nav class="nav">
+        <ul class="nav-list">
+            <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+            <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+            <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+        </ul>
+    </nav>
+    
+    <div class="container">
+        <p>The World Wide Fund for Nature (WWF) is....</p>
+    </div>
 
     <section>
         <h1>WWF</h1>
@@ -26,5 +53,4 @@
     </footer>
 
 </body>
-
 </html>
