--- a/rsschool-cv/index.html
+++ b/rsschool-cv/index.html
@@ -15,41 +15,48 @@
         <p>Here I am.</p>
     </header>
     <div class="container">
+        <figure>
+            <img src="IMG_20230624_155904.jpg" alt="The Pulpit Rock" width="204" height="252">
+            <figcaption>New front-end developer</figcaption>
+        </figure>
         <h2>Contacts</h2>
         <ul class="nav-list">
             <li class="nav-item">diskord norikin_yaroslava;</li>
             <li class="nav-item">telegram @fvfngrdth;</li>
             <li class="nav-item">janorka2004@gmail.com</li>
         </ul>
+        
     </div>
-
-
-    <nav>
-        <a href="/html/">HTML</a> |
-        <a href="/css/">CSS</a>
-    </nav>
-    <nav class="nav">
-        <ul class="nav-list">
-            <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-            <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
-            <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-        </ul>
-    </nav>
     
     <div class="container">
-        <p>The World Wide Fund for Nature (WWF) is....</p>
+        <h2>About me</h2>
+        <p>I am studying at ITMO University with a degree in Mobile and Network Technologies and want to become a
+            front-end
+            developer. I would like to learn a relevant and interesting profession, so in my free time from studying, I
+            decided
+            to take courses from rsschool. My goal is to become a good specialist and within six months to gain the work
+            skills
+            necessary for employment. At the moment, I participated in team educational projects, where I tried myself as a
+            developer: a photo conversion site and a university job search site “ITMO-HUNTER”. I am extremely inspired by
+            the
+            result, but I still lack skills in website layout and design</p>
     </div>
 
     <section>
-        <h1>WWF</h1>
-        <p>The World Wide Fund for Nature (WWF) is....</p>
+        <h1>Skills</h1>
+        <p>I have skills in working with Git, figma, photoshop, program in C++, python, html&css, use vs code and pycharm, have
+            used Docker, Linux VM</p>
+        <h2>Work experience</h2>
+        <p>Participation in training projects and team interaction</p>
+        <ul class="nav-list">
+            <li class="nav-item"><a href="https://github.com/KERILL-I/image-to-sketch">image-to-sketch</a></li>
+            <li class="nav-item"><a href="https://github.com/MKYrii/programming_project.git">ITMO-HUNTER</a></li>
+        </ul>
+        <h2>Place of study - ITMO University</h2>
+        <h3>English language intermediate level</h3>
     </section>
-    <figure>
-        <img src="pic_mountain.jpg" alt="The Pulpit Rock" width="304" height="228">
-        <figcaption>Fig1. - Here I am.</figcaption>
-    </figure>
-    <footer>
-        <p>Posted by: </p>
+<footer class="container">
+    <p>Posted: 2024 </p>
     </footer>
 
 </body>
